<?xml version="1.0"?>
<package format="2">
  <name>uav4pe_navigation</name>
  <version>1.0.0</version>
  <description>Navigation package for the UAV4PE Framework to plan UAV Autonomous Mission for Planetary Exploration.</description>

  <maintainer email="galvezse@qut.edu.au">Julian Galvez-Serna</maintainer>
  <maintainer email="dennis.brar@qut.edu.au">dennis</maintainer>

  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>

</package>
